# pointcloud-tools

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.colmap  README.md  docker-compose.yaml  docker_build.sh  envoy.yaml  formatter.sh
.devcontainer/: devcontainer.json  docker-compose.extend.yaml
.github/workflows/: pipeline.yml
cmake/: duna-cloud-tools-config.cmake.in  duna-pointcloud-tools-config.cmake.in  pointcloud-tools-config.cmake.in
colmap/: CMakeLists.txt  colmap_service.cpp
demo/: CMakeLists.txt  labeled_point.cpp  segmentation.cpp
docs/: MapRep.puml  Processing.md  architecture.puml
filters/: CMakeLists.txt
filters/include/duna/: voxel_max.h
filters/src/: gen_box.cc  voxel_max.cpp
grpc/: CMakeLists.txt  client.cpp  gen_proto.cmake  grpc_conversions.cpp  grpc_server.cpp  metric_services.cpp  pc_client.cpp  proto_vs_pcl.cpp  server.cpp  tools_grpc_server.cpp
grpc/include/: filter.h  filter_clipbox.h  filter_factory.h  filter_ror.h  filter_services.h  filter_sor.h  filter_voxel_grid.h  grpc_conversions.h  ifilter.h  las_conversions.h  metric_services.h  pcl_conversions.h  reconstruct_services.h  segmentation_services.h  service_exceptions.h
grpc/protos/: common.proto  filters.proto  metrics.proto  reconstruct.proto  segmentation.proto  tools.proto  tools_interface.proto
grpc/src/: filter.cpp  filter_clipbox.cpp  filter_factory.cpp  filter_ror.cpp  filter_services.cpp  filter_sor.cpp  filter_voxel_grid.cpp  ifilter.cpp  las_conversions.cpp  metric_services.cpp  reconstruct_services.cpp  segmentation_services.cpp  tools_grpc_server.cpp
grpc/tst/: test_service.cpp
grpc/tst/tst_data/: input_las.las
include/: asl_parser.h  global_registration.h
lib/: asl_parser.cpp  global_registration.cpp
mapping/: CMakeLists.txt
mapping/include/: pointcloud_map.h  voxel_hashing.h  voxel_hashing_map.h
mapping/include/duna/mapping/: IMap.h  KDTreeMap.h  VoxelHashMap.h  corrsepondence.h  voxel_hashing_map.h
mapping/src/: KDTreeMap.cpp  OLD_voxel_hashing_map.cpp  VoxelHashMap.cpp  voxel_hashing_map.cpp
mapping/tst/: test_kdtree_mapping.cpp  test_voxel_mapping.cpp  tst_insert.cpp
metrics/: CMakeLists.txt
metrics/include/: metrics.h  metrics_exceptions.h
metrics/src/: metrics.cpp
metrics/tst/: test_compute_area.cpp  test_surface.ply
ml/: README.md  build_docker.sh  requirements.txt
ml/.devcontainer/: Dockerfile  devcontainer.json
ml/src/: app.py  test_pointnet.py
protos/: tools_interface.proto
registration/: asl_parser.cpp  global_registration.cpp
registration/include/: asl_parser.h  global_registration.h
scan_matching/: CMakeLists.txt
scan_matching/include/duna/scan_matching/: scan_matching.h  scan_matching_2.h  scan_matching_2_base.h  scan_matching_2d.h  scan_matching_3dof.h  scan_matching_base.h
scan_matching/tst/: registration_point2plane.cpp  registration_point2plane3DOF.cpp  registration_point2point.cpp  registration_point2point2.cpp  registration_point2point2d.cpp  registration_point2point3DOF.cpp  sequence_3dof.cpp  test_main.cpp  test_visualization.h
src/: batch_ror.cpp  batch_sor.cpp  batch_voxel.cpp  keypoint.cpp  keypoint_registration.cpp
test/: CMakeLists.txt  src.cpp
